--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "karma start test/karma.conf.coffee"
+    "test": "node_modules/karma/bin/karma start test/karma.conf.coffee "
   },
   "repository": {
     "type": "git",
